--- a/Project01.Rmd
+++ b/Project01.Rmd
@@ -28,7 +28,7 @@ Examples could be one of the new core Biology classes, another 300-level course 
 You will work with the same groups as for the Homework 2 Peer review. 
 
 ```{r}
-PeerGroups1 <- read_csv("../00-Syllabus/PeerGroups1.csv")
+PeerGroups1 <- read_csv("PeerGroups1.csv")
 PeerGroups1 %>% 
   select(-MAJR, -CLAS, ) %>%
   print()
@@ -53,73 +53,32 @@ Each group should use an *Acknowledgements* section to document the participatio
 
 Additional credit will be awarded for providing assistance to other groups and for the development of a tutorial that goes beyond the minimal expectations listed above.
 
-## Sample Dataset
 
-One of the possible datasets to use for the tutorial can be found in the datasauRus package.
 
 ```{r}
-datasaurus_dozen %>% 
-  group_by(dataset) %>% 
-  summarize(
-      mean_x    = mean(x),
-      mean_y    = mean(y),
-      std_dev_x = sd(x),
-      std_dev_y = sd(y),
-      corr_x_y  = cor(x, y)
-      )
+
 ```
 
-Boxplots of either the x or the y value show that there is something strange going on.
 
 ```{r}
-ggplot(datasaurus_dozen, aes(x = x, colour = dataset))+
-    geom_boxplot()+
-    theme_void()+
-    theme(legend.position = "none")+
-    facet_wrap(~dataset, ncol = 3)
+
 ```
 
 ```{r}
-ggplot(datasaurus_dozen, aes(x = y, colour = dataset))+
-    geom_boxplot()+
-    theme_void()+
-    theme(legend.position = "none")+
-    facet_wrap(~dataset, ncol = 3)
+
 ```
 
-But you have to visualize all of the data with a scatter plot to really see the patterns.
-
-```{r fig.height=12, fig.width=9}
-  ggplot(datasaurus_dozen, aes(x = x, y = y, colour = dataset))+
-    geom_point()+
-    theme_void()+
-    theme(legend.position = "none")+
-    facet_wrap(~dataset, ncol = 3)
-```
-
-And did you notice the code in the {r} codechunk header that controlled the size of the output in the Rmd? Pretty neat trick!
-
-And here are two versions of the data that you could use in your data visualization tutorial. 
-To use them you would probably want to change the names of the datasets and also make x and y more meaningful. 
-Then save them as a csv or tsv to be imported later for your tutorial. 
 
 ```{r}
-datasaurus_long <- datasaurus_dozen
-datasaurus_wide <- datasaurus_dozen_wide
-head(datasaurus_long)
-head(datasaurus_wide)
+
+```
+
+
+
+```{r}
+
 ```
 
 # Acknowledgements
 
-DatasauRus package and description below: Stephanie Locke https://github.com/jumpingrivers/datasauRus
 
-The datasauRus package wraps the awesome Datasaurus Dozen dataset, which contains 13 sets of x-y data. Each sub-dataset has five statistics that are (almost) the same in each case. (These are the mean of x, mean of y, standard deviation of x, standard deviation of y, and Pearson correlation between x and y). However, scatter plots reveal that each sub-dataset looks very different. The dataset is intended to be used to teach students that it is important to plot their own datasets, rather than relying only on statistics.
-
-The Datasaurus was created by Alberto Cairo in this great [blog post](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html).
-
-He's been subsequently made even more famous in the paper [Same Stats, Different Graphs: Generating Datasets with Varied Appearance and Identical Statistics through Simulated Annealing](https://www.autodeskresearch.com/publications/samestats) by Justin Matejka and George Fitzmaurice.
-
-In the paper, Justin and George simulate a variety of datasets that the same summary statistics to the Datasaurus but have very different distributions. 
-
-This package also makes these datasets available for use as an advanced [Anscombe's Quartet](https://en.wikipedia.org/wiki/Anscombe%27s_quartet), available in R as `anscombe`.
