--- a/Project01.Rmd
+++ b/Project01.Rmd
@@ -6,12 +6,6 @@ author: Prof. Ken Field
 date: 9 Feb 2022
 ---
 
-```{r Load Libraries, include=FALSE}
-# Load other packages here.
-if (!require("datasauRus")) install.packages("datasauRus"); library(datasauRus)
-if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
-```
-
 This project will require you to develop a tutorial to teach Bucknell students how to use R for graphing and data analysis. 
 
 ## Target Audience
@@ -23,16 +17,23 @@ Examples could be one of the new core Biology classes, another 300-level course 
 
 ```
 
-## Groups
 
-You will work with the same groups as for the Homework 2 Peer review. 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r Load Libraries, include=FALSE}
+# Load other packages here.
+if (!require("datasauRus")) install.packages("datasauRus"); library(datasauRus)
+if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
+```
 
 ```{r}
-PeerGroups1 <- read_csv("PeerGroups1.csv")
-PeerGroups1 %>% 
-  select(-MAJR, -CLAS, ) %>%
-  print()
+library(readr)
+Covid_19<-read_csv("./Data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv")
+str(Covid_19)
 ```
+
 
 ## Grading
 
