--- a/Project01.Rmd
+++ b/Project01.Rmd
@@ -141,20 +141,38 @@ As there are no apparent issues, we can move to the next step in the checklsit.
 
 ##Check Top and Bottom of Data
 
-Assessing the beginning and end of the dataframe is a useful tool to assure the data was loaded in property, the data is properly formatted, and that all expected data is present. Should dates be present in the dataframe, this technique is useful to check the ordering. As 
+Assessing the beginning and end of the dataframe is a useful tool to assure the data was loaded in property, the data is properly formatted, and that all expected data is present. Should dates be present in the dataframe, this technique is useful to check the ordering of them.  
+
+The "Covid_19" dataframe has dates and the ordering should be evaluated. This can be completed via the head and tail R commands. The structure of this commands is as follows: head/tail(dataframe[, c(column:column, #rows)]).
 
 
+DESCRIBE BRACKETS and then "," and c(range)
 
 ```{r}
-
+head(Covid_19[, c(1:3, 10)])
+tail(Covid_19[, c(1:3, 10)])
 ```
 
+By looking at the start dates, we can see that the dataframe is logical. At the head (first ten rows), the data collection start date began in January of 2020. At the tail of the dataframe (last ten rows), the start date began in February of 2022. 
 
-
-
-
+Additionally, the tail command can be useful for identifying extraneous values or information placed at the end of the dataframe. 
 
 ##For the checking N's section potentially? (BT)
+
+For data exploration, it is helpful to identify landmarks within a dataframe that can be used to check against the data being evaluated. This can be number a number of ways, but simply, a table can be made. As the Covid-19 dataframe uses counts people, this variable can be used to check ot mkae sure the expected amount of observations are present. The same can be done by evaluating the "State" variable.
+
+The function table can be utilized in R. The structure of the command is as follows: table(dataframe$variable). The dollar sign here is used to evaluate a particular viaribale from a particular dataframe. 
+
+```{r}
+table(Covid_19$Sex)
+table(Covid_19$State)
+```
+
+By counting the number of observations from each variable category (whether sex or state), the number equals the amount of observations present in the dataframe. By looking at the states, however, we note that Puerto Rico and District of Columbia are included on the dataset. It is up to the epidemiologist, in later sections, to determine whether these locations should be included in analysis. 
+
+
+
+
 Checking if the total deaths match for each time division (by month, by year, total)
 ```{r}
 sum(Covid_19.S.T.X.A$`COVID-19 Deaths`)
