--- a/Project01.Rmd
+++ b/Project01.Rmd
@@ -44,7 +44,7 @@ The employment of epidemiology has been notably publicized by the COVID-19 epide
 At the conclusion of this project, the following should be accomplished:
   1. Relate epidemiology data collection to data science/analysis
   2. Carry out scientific method
-      a.Perform an exploration of dataset using R 
+      a. Perform an exploration of dataset using R 
       b. Perform basic data analysis using R
       c. Draw conclusions from analysis
   
@@ -201,7 +201,7 @@ sum(Covid_19.Deaths.byM$`COVID-19 Deaths`, na.rm = TRUE)
 
 ##Other Checks to Consider
 
-After an initial check over the dataframe has been complete, there are other factors to consider. For this purpose of this R tutorial, they will not be completed, but rather highlighted as things to be consider when conducting ones own data analysis. The first additional rule of thumb is to validate your data with an external source. The CDC is very reliable, but say you had your own data. One would want to compare observations and numeric variables against another reliable source to conclude the absence of erroneous data. Furthermore, it may be beneficial to try to answer your question/hypothesis in the easiest way possible. Say your question simply asks which state had the most COVID-19 death in 2020. The data can simply be filtered and does not need to be further explored. The solution to those questions, however, should be challenged if possible. Factors such as some states not reporting data could be an issue (just as an example, not in this dataframe). The purpose of this section us to riase the point that not all questions need a deep dive into data analysis, rather, just a basic R exploraition. Questions that compare variables are look at causality, however, do require a lengthier analysis. 
+After an initial check over the dataframe has been complete, there are other factors to consider. For this purpose of this R tutorial, they will not be completed, but rather highlighted as things to be consider when conducting ones own data analysis. The first additional rule of thumb is to validate your data with an external source. The CDC is very reliable, but say you had your own data. One would want to compare observations and numeric variables against another reliable source to conclude the absence of erroneous data. Furthermore, it may be beneficial to try to answer your question/hypothesis in the easiest way possible. Say your question simply asks which state had the most COVID-19 death in 2020. The data can simply be filtered and does not need to be further explored. The solution to those questions, however, should be challenged if possible. Factors such as some states not reporting data could be an issue (just as an example, not in this dataframe). The purpose of this section us to riase the point that not all questions need a deep dive into data analysis, rather, just a basic R exploration. Questions that compare variables are look at causality, however, do require a lengthier analysis. 
 
 
 VISUALIZATION OF DATASET AND VARIABLES OF INTEREST:
