--- a/Project01.Rmd
+++ b/Project01.Rmd
@@ -10,7 +10,7 @@ Data set we are using: https://data.cdc.gov/NCHS/Provisional-COVID-19-Deaths-by-
 
 Outline:
 1) Introduction to class
-2) Introduction to R (M)
+2) Introduction to R (M - Done)
     Define RMD vs Regular R
     Loading Data Set
     Load Packages
